err/flyshare.err
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/flyshare'...
Listing './lib/python3.5/site-packages/flyshare/arp'...
Listing './lib/python3.5/site-packages/flyshare/backtest'...
Listing './lib/python3.5/site-packages/flyshare/cmd'...
Listing './lib/python3.5/site-packages/flyshare/data'...
Listing './lib/python3.5/site-packages/flyshare/fetch'...
Compiling './lib/python3.5/site-packages/flyshare/fetch/query_async.py'...
***   File "./lib/python3.5/site-packages/flyshare/fetch/query_async.py", line 58
    item['low']), float(item['close']), float(item['vol']), item['date']] async for item in collections.find({
                                                                              ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/flyshare/language'...
Listing './lib/python3.5/site-packages/flyshare/language/chinese'...
Listing './lib/python3.5/site-packages/flyshare/language/english'...
Listing './lib/python3.5/site-packages/flyshare/market'...
Listing './lib/python3.5/site-packages/flyshare/stock'...
Listing './lib/python3.5/site-packages/flyshare/su'...
Listing './lib/python3.5/site-packages/flyshare/util'...
Listing './lib/python3.5/site-packages/flyshare-0.0.21.dist-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
